--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "chart.js": "^2.9.3",
     "chartjs": "^0.3.24",
     "core-js": "^3.6.4",
+    "leaflet": "^1.6.0",
     "vue": "^2.6.11",
     "vue-chartjs": "^3.5.0",
     "vue-router": "^3.1.6",
+    "vue2-leaflet": "^2.5.2",
     "vuetify": "^2.2.11",
     "vuex": "^3.1.3"
   },
